fix li to align text left

--- a/cdn/css/webui.css
+++ b/cdn/css/webui.css
@@ -729,7 +729,7 @@ ol {
 li {
     position: relative;
     line-height: 1.5em;
-    align-items: center;
+    text-align: left;
 }
 
 li>svg:first-child,
